infrastructure/kubernetes/base/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      nodeSelector:
        environment: dev
        service: auth
      containers:
      - name: auth-service
        image: ernest633/auth-service:latest
        ports:
        - containerPort: 8000
